--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^2.2.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-vuetify": "~2.4.1",
     "vue-jest": "^5.0.0-0"
   },
   "eslintConfig": {
